@startuml

title __DATABASE's Class Diagram__\n

  namespace database {
    abstract class database.DatabaseAccess {
        {static} # DATABASE_NAME : String
        {static} # DB_PASSWORD : String
        {static} # DB_URL : String
        {static} # DB_USERNAME : String
        # connection : Connection
        # closeConnection()
        # startConnection()
    }
  }
  

  namespace database {
    class database.TaskDAO {
        {static} - TABLE_NAME : String
        - tasks : List<Task>
        + TaskDAO()
        + add()
        + edit()
        + get()
        + markTaskAsCompleted()
        + remove()
        - doesIdExistInList()
        - refreshTaskList()
    }
  }
  

  namespace database {
    class database.UserDAO {
        {static} - TABLE_NAME : String
        - password : String
        - username : String
        + UserDAO()
        + add()
        + edit()
        + get()
        + getAllUsernames()
        + getUser()
        + initialize()
        + remove()
    }
  }
  

  database.TaskDAO .up.|> entities.DAO
  database.TaskDAO -up-|> database.DatabaseAccess
  database.TaskDAO o-- entities.User : user
  database.UserDAO .up.|> entities.DAO
  database.UserDAO -up-|> database.DatabaseAccess
  database.UserDAO o-- entities.User : user


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
